force-app/main/default/objects/IAR_DST__c/IAR_DST__c.object-meta.xml
<CustomObject>
    <description>The collection of Intake and IAR DST data may not be required for all programs.</description>
    <label>IAR-DST</label>
    <nameField>
        <label>IAR-DST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IAR-DSTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>