force-app/main/default/objects/IAR_DST__c/fields/iar_dst_domain_1__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_1__c</fullName>
    <label>IAR-DST - Domain 1 - Symptom Severity an</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No problem in this domain</fullName>
            </value>
            <value>
                <fullName>1:	Mild or sub diagnostic</fullName>
            </value>
            <value>
                <fullName>2:	Moderate</fullName>
            </value>
            <value>
                <fullName>3:	Severe</fullName>
            </value>
            <value>
                <fullName>4:	Very severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>