force-app/main/default/objects/IAR_DST__c/fields/iar_dst_domain_2__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_2__c</fullName>
    <label>IAR-DST - Domain 2 - Risk of Harm (Prima</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No identified risk in this domain</fullName>
            </value>
            <value>
                <fullName>1:	Low risk of harm</fullName>
            </value>
            <value>
                <fullName>2:	Moderate risk of harm</fullName>
            </value>
            <value>
                <fullName>3:	High risk of harm</fullName>
            </value>
            <value>
                <fullName>4:	Very high risk of harm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>