force-app/main/default/objects/IAR_DST__c/fields/iar_dst_domain_4__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_domain_4__c</fullName>
    <label>IAR-DST - Domain 3 - Functioning (Primar</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:	No problem in this domain</fullName>
            </value>
            <value>
                <fullName>1:	Minor impact</fullName>
            </value>
            <value>
                <fullName>2:	Moderate impact</fullName>
            </value>
            <value>
                <fullName>3:	Severe impact</fullName>
            </value>
            <value>
                <fullName>4:	Very severe impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>