force-app/main/default/objects/IAR_DST__c/fields/iar_dst_practitioner_level_of_care__c.field-meta.xml
<CustomField>
    <fullName>iar_dst_practitioner_level_of_care__c</fullName>
    <label>IAR-DST - Practitioner Level of Care</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	Level 1 - Self Management</fullName>
            </value>
            <value>
                <fullName>2:	Level 2 - Low Intensity Services</fullName>
            </value>
            <value>
                <fullName>3:	Level 3 - Moderate Intensity Services</fullName>
            </value>
            <value>
                <fullName>4:	Level 4 - High Intensity Services</fullName>
            </value>
            <value>
                <fullName>5:	Level 5 - Acute and Specialist Community Mental Health Services</fullName>
            </value>
            <value>
                <fullName>9:	Not stated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>