force-app/main/default/objects/IAR_DST__c/fields/IAR_DST_Tags__c.field-meta.xml
<CustomField>
    <fullName>IAR_DST_Tags__c</fullName>
    <label>IAR-DST - Tags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>