force-app/main/default/objects/IAR_DST__c/fields/IAR_DST_Version__c.field-meta.xml
<CustomField>
    <fullName>IAR_DST_Version__c</fullName>
    <label>IAR-DST - Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:	DST specified by National PHN Guidance Initial Assessment and Referral for Mental Healthcare version 1.05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>