force-app/main/default/objects/IAR_DST__c/fields/Measure_Key__c.field-meta.xml
<CustomField>
    <fullName>Measure_Key__c</fullName>
    <description>This is a number or code assigned to each instance of a measure. The Measure Key is unique and stable for each instance of a measure at the level of the organisation.</description>
    <label>Measure Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>