force-app/main/default/objects/IAR_DST__c/fields/Organisation_Path__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Path__c</fullName>
    <label>Organisation Path</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>